; ModuleID = '/home/carl/AnghaBench/freebsd/sys/dev/fdt/extr_simple_mfd.c_simple_mfd_syscon_modify_4.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/dev/fdt/extr_simple_mfd.c_simple_mfd_syscon_modify_4.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.syscon = type { i32 }
%struct.simple_mfd_softc = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.syscon*, i32, i32, i32)* @simple_mfd_syscon_modify_4 to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @simple_mfd_syscon_modify_4(%struct.syscon* %0, i32 %1, i32 %2, i32 %3) #0 {
  %5 = alloca %struct.syscon*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32, align 4
  %8 = alloca i32, align 4
  %9 = alloca %struct.simple_mfd_softc*, align 8
  %10 = alloca i32, align 4
  store %struct.syscon* %0, %struct.syscon** %5, align 8
  store i32 %1, i32* %6, align 4
  store i32 %2, i32* %7, align 4
  store i32 %3, i32* %8, align 4
  %11 = load %struct.syscon*, %struct.syscon** %5, align 8
  %12 = getelementptr inbounds %struct.syscon, %struct.syscon* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.simple_mfd_softc* @device_get_softc(i32 %13)
  store %struct.simple_mfd_softc* %14, %struct.simple_mfd_softc** %9, align 8
  %15 = load %struct.simple_mfd_softc*, %struct.simple_mfd_softc** %9, align 8
  %16 = call i32 @SYSCON_LOCK(%struct.simple_mfd_softc* %15)
  %17 = load %struct.simple_mfd_softc*, %struct.simple_mfd_softc** %9, align 8
  %18 = getelementptr inbounds %struct.simple_mfd_softc, %struct.simple_mfd_softc* %17, i32 0, i32 0
  %19 = load i32, i32* %18, align 4
  %20 = load i32, i32* %6, align 4
  %21 = call i32 @bus_read_4(i32 %19, i32 %20)
  store i32 %21, i32* %10, align 4
  %22 = load i32, i32* %7, align 4
  %23 = xor i32 %22, -1
  %24 = load i32, i32* %10, align 4
  %25 = and i32 %24, %23
  store i32 %25, i32* %10, align 4
  %26 = load i32, i32* %8, align 4
  %27 = load i32, i32* %10, align 4
  %28 = or i32 %27, %26
  store i32 %28, i32* %10, align 4
  %29 = load %struct.simple_mfd_softc*, %struct.simple_mfd_softc** %9, align 8
  %30 = getelementptr inbounds %struct.simple_mfd_softc, %struct.simple_mfd_softc* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = load i32, i32* %6, align 4
  %33 = load i32, i32* %10, align 4
  %34 = call i32 @bus_write_4(i32 %31, i32 %32, i32 %33)
  %35 = load %struct.simple_mfd_softc*, %struct.simple_mfd_softc** %9, align 8
  %36 = call i32 @SYSCON_UNLOCK(%struct.simple_mfd_softc* %35)
  ret i32 0
}

declare dso_local %struct.simple_mfd_softc* @device_get_softc(i32) #1

declare dso_local i32 @SYSCON_LOCK(%struct.simple_mfd_softc*) #1

declare dso_local i32 @bus_read_4(i32, i32) #1

declare dso_local i32 @bus_write_4(i32, i32, i32) #1

declare dso_local i32 @SYSCON_UNLOCK(%struct.simple_mfd_softc*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
